web/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php-guestbook-web
  name: php-guestbook-web
  namespace: php-guestbook
spec:
  ports:
  - name: 80-80
    nodePort: 30103
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: php-guestbook-web
  type: NodePort
